# MiniFlow

./: .gitignore  README.md  V1.md  V2.md  demo.py  doc_manual.md  pyproject.toml
src/miniflow/: __init__.py  cli.py  db.py  feature_store.py  registry.py  tracker.py  utils.py
tests/: conftest.py  test_cli.py  test_feature_store.py  test_registry.py  test_tracker.py
